--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,15 +1,19 @@
 <div class="container">
   <div class="user-details">
-    <h3> Featured Projects </h3>
+    <h3> Education background </h3>
   </div>
   <div class="row user-projects">
     <div class="six columns images">
       <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
-      <h5> Project Title </h5>
-      <li> Featured Skills</li>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h5> Soochow University </h5>
+      
+      <p>
+        Major: Software Engineering
+        Major GPA:3.7/4.0               					           
+        Sept. 2013 - Jun. 2016
+      </p>
       <a class="project-link" href="#">Check it out</a>
     </div>
   </div>
@@ -18,11 +22,13 @@
       <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
-      <h5> Project Title </h5>
-      <ul>
-        <li> Featured Skills</li>
-      </ul>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h5> University of Wisconsin Madison</h5>
+
+      <p>
+        Major: Computer Science
+        Major GPA:3.5/4.0   
+        Sep. 2015 - Dec. 2015
+      </p>
       <a class="project-link" href="#">Check it out</a>
     </div>
   </div>
