--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,8 +10,8 @@
       <h5> Soochow University </h5>
       
       <p>
-        Major: Software Engineering
-        Major GPA:3.7/4.0               					           
+        Major: Software Engineering<br/>
+        Major GPA:3.7/4.0   <br/>            					           
         Sept. 2013 - Jun. 2016
       </p>
       <a class="project-link" href="#">Check it out</a>
@@ -25,8 +25,8 @@
       <h5> University of Wisconsin Madison</h5>
 
       <p>
-        Major: Computer Science
-        Major GPA:3.5/4.0   
+        Major: Computer Science<br/>
+        Major GPA:3.5/4.0   <br/>
         Sep. 2015 - Dec. 2015
       </p>
       <a class="project-link" href="#">Check it out</a>
