--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,7 +4,7 @@
   </div>
   <div class="row user-projects">
     <div class="six columns images">
-      <img alt="mountains" src="{{ "/src/img/mountains.jpg" | prepend: site.baseurl }}" />
+      <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
       <h5> Soochow University </h5>
@@ -19,7 +19,7 @@
   </div>
   <div class="row user-projects">
     <div class="six columns">
-      <img alt="mountains" src="{{ "/src/img/skate.jpg" | prepend: site.baseurl }}" />
+      <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
       <h5> University of Wisconsin Madison</h5>
