--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,18 +1,18 @@
 <div class="container">
   <div class="user-details">
-    <h3> My Expertise </h3>
+    <h3> Awards </h3>
     <p> 
-  China Talent Scholarship                                                        2016<br/>
-  1st Prize of Excellent Student Scholarship                                      2015 - 2016<br/>
-  Foreign Exchange Student Scholarship                                            2015<br/>
-  Excellent Student Scholarship of Government Office                              2015<br/>
-  International Exchange Student Scholarship of UW-Madison                        2015<br/>
-  Quality Development Scholarship                                                 2015<br/>
-  2nd Prize of Excellent Student Scholarship                                      2014 - 2015<br/>
-  Comprehensive Scholarship                                                       2014 & 2015& 2016<br/>
-  Merit Student of Soochow University                                             2014 & 2016<br/>
-  Social Work Scholarship                                                         2014 & 2016<br/>
-  1st Prize of Excellent Student Scholarship                                      2013 - 2014 <br/>
+  China Talent Scholarship       &nbsp; &nbsp; &nbsp;                                                  2016<br/>
+  1st Prize of Excellent Student Scholarship           &nbsp;  &nbsp; &nbsp;                           2015 - 2016<br/>
+  Foreign Exchange Student Scholarship                         &nbsp; &nbsp; &nbsp;                    2015<br/>
+  Excellent Student Scholarship of Government Office           &nbsp; &nbsp; &nbsp;                    2015<br/>
+  International Exchange Student Scholarship of UW-Madison     &nbsp; &nbsp; &nbsp;                    2015<br/>
+  Quality Development Scholarship                     &nbsp; &nbsp; &nbsp;                             2015<br/>
+  2nd Prize of Excellent Student Scholarship             &nbsp; &nbsp; &nbsp;                          2014 - 2015<br/>
+  Comprehensive Scholarship                            &nbsp; &nbsp; &nbsp;                            2014 & 2015& 2016<br/>
+  Merit Student of Soochow University                     &nbsp; &nbsp; &nbsp;                         2014 & 2016<br/>
+  Social Work Scholarship                               &nbsp; &nbsp; &nbsp;                           2014 & 2016<br/>
+  1st Prize of Excellent Student Scholarship              &nbsp; &nbsp; &nbsp;                         2013 - 2014 <br/>
  </p>
   </div>
   <div class="row user">
