--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,6 +15,21 @@
   1st Prize of Excellent Student Scholarship              &nbsp; &nbsp; &nbsp;                         2013 - 2014 <br/>
  </p>
   </div>
+  <div class="user-details">
+    <h3> WORK EXPERIENCE </h3>
+    <p> 
+<h5>Intern, NONEAD Corporation     </h5>                                                Aug. 2016 - Present<br/>
+	Responsible for the development of embedded system<br/>
+	Developed the software of robot: Nexteer automatic screw project, Nexteer rotor sprint project. <br/>
+    </p>
+    <p>
+    <h5>Intern, Jiangsu Suzhou Local Taxation Bureau</h5>                              Jul. 2015 - Aug. 2015<br/>
+	Responsible for online platform work for the tax system<br/>
+	Responsible for online account cancellation made by enterprises<br/>
+	Responsible for online invoice sales<br/>
+
+ </p>
+  </div>
   <div class="row user">
     <div class="four columns">
       <h4>Design</h4>
