--- a/_includes/about.html
+++ b/_includes/about.html
@@ -30,6 +30,9 @@ Responsible for online invoice sales<br/>
 
  </p>
   </div>
+  <div class="user-details">
+    <h3> TECHNICAL SKILLS  </h3>
+</div>
   <div class="row user">
     <div class="four columns">
       <h4>Design</h4>
