--- a/_includes/about.html
+++ b/_includes/about.html
@@ -24,14 +24,14 @@ Responsible for online invoice sales<br/>
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
-      <p>Jquery, .NET, HTML,bootstrap</p>
+      <p>Jquery, .NET, HTML,Bootstrap</p>
     </div>
     <div class="four columns">
       <h4>Code</h4>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Java,C++,matlab</p>
+      <p>Java,C++,Matlab</p>
     </div>
     <div class="four columns">
       <h4>Tools</h4>
