--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,9 +1,26 @@
 <div class="container">
- 
+   <div class="user-details">
+    <h3> RESEARCH EXPERIENCE </h3>
+    <p> 
+
+<h5>Institute of Human Language Technology, Soochow University     </h5>                                            Sep 2013 – Jan 2017<br/>
+Project: Research on NLP                                                             
+Developed a reptile program to get parallel corpus from website based on JAVA, which can be used as training or testing file for SMT and NMT experiments. Classify the corpus and writing documents.<br/>
+Project of term extraction using statistical methods. It can extract bilingual terms from parallel corpus efficiently.<br/>
+Designing different Convolutional neural networks to improve the accuracy of the existent translation system using Theano and Python.<br/>
+    </p>
+    <p>
+    <h5>Intern, Jiangsu Suzhou Local Taxation Bureau</h5>                              Jul. 2015 - Aug. 2015<br/>
+Project: Translation Analysis System													     
+ Designed a Translation Visualization system using ECharts and JavaScript, which can help researchers analyses the machine translation process in a clear and convenient way.<br/>
+ Designed an Intelligent machine translation analysis system, which can tell users both general and specific performance of two different translation systems, based on HTML, JSP, Bootstrap, and JAVA.<br/>
+
+ </p>
+  </div>
   <div class="user-details">
     <h3> WORK EXPERIENCE </h3>
     <p> 
-<h5>Intern, NONEAD Corporation     </h5>                                                Aug. 2016 - Present<br/>
+<h5>Intern, NONEAD Corporation     </h5>                                                Aug. 2016 - Apr. 2017 <br/>
 Responsible for the development of embedded system<br/>
 Developed the software of robot: Nexteer automatic screw project, Nexteer rotor sprint project. <br/>
     </p>
@@ -24,21 +41,21 @@ Responsible for online invoice sales<br/>
       <i class="devicon-html5-plain-wordmark"></i>
       <i class="devicon-bootstrap-plain-wordmark colored"></i>
       <i class="devicon-sass-original colored"></i>
-      <p>Jquery, .NET, HTML,Bootstrap</p>
+      <p>JQuery,Javasript,HTML,CSS,Bootstrap</p>
     </div>
     <div class="four columns">
       <h4>Code</h4>
       <i class="devicon-javascript-plain colored"></i>
       <i class="devicon-react-original-wordmark colored"></i>
       <i class="devicon-nodejs-plain-wordmark"></i>
-      <p>Java,C++,Matlab</p>
+      <p>Java,C++,C#,Matlab</p>
     </div>
     <div class="four columns">
       <h4>Tools</h4>
       <i class="devicon-git-plain"></i>
       <i class="devicon-gulp-plain colored"></i>
       <i class="devicon-atom-original-wordmark"></i>
-      <p>Visual Studio, Eclipse, NetBeans</p>
+      <p>Visual Studio, Eclipse, NetBeans, Apache Tomcat, Github</p>
     </div>
   </div>
  <div class="user-details">
