--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,14 +4,14 @@
     <p> 
 
 <h5>Institute of Human Language Technology, Soochow University     </h5>                                            Sep 2013 – Jan 2017<br/>
-<h6>Project: Research on NLP   </h6>                                                            
+<h6>Project: Research on NLP<br/>    </h6>                                                            
 Developed a reptile program to get parallel corpus from website based on JAVA, which can be used as training or testing file for SMT and NMT experiments. Classify the corpus and writing documents.<br/>
 Project of term extraction using statistical methods. It can extract bilingual terms from parallel corpus efficiently.<br/>
 Designing different Convolutional neural networks to improve the accuracy of the existent translation system using Theano and Python.<br/>
     </p>
     <p>
     Jul. 2015 - Aug. 2015<br/>
-<h6>Project: Translation Analysis System	</h6>												     
+<h6>Project: Translation Analysis System	<br/> </h6>												     
  Designed a Translation Visualization system using ECharts and JavaScript, which can help researchers analyses the machine translation process in a clear and convenient way.<br/>
  Designed an Intelligent machine translation analysis system, which can tell users both general and specific performance of two different translation systems, based on HTML, JSP, Bootstrap, and JAVA.<br/>
 
@@ -20,7 +20,7 @@ Designing different Convolutional neural networks to improve the accuracy of the
   <div class="user-details">
     <h3> WORK EXPERIENCE </h3>
     <p> 
-<h5>Intern, NONEAD Corporation     </h5>                                                Aug. 2016 - Apr. 2017 <br/>
+<h5>Intern, NONEAD Corporation    </h5>                                                Aug. 2016 - Apr. 2017 <br/>
 Responsible for the development of embedded system<br/>
 Developed the software of robot: Nexteer automatic screw project, Nexteer rotor sprint project. <br/>
     </p>
