--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,6 +5,20 @@
   </div>
   <div class="row user-projects">
     <div class="six columns images">
+      <img alt="USC" src="{{ "/assets/img/usc.jpg" | prepend: site.baseurl }}" />
+    </div>
+    <div class="six columns">
+      <h5> Univesity of Southern California </h5>
+      
+      <p>
+        Major: Computer Science<br/>         					           
+        Sept. 2017 - May. 2019
+      </p>
+ 
+    </div>
+  </div>
+  <div class="row user-projects">
+    <div class="six columns images">
       <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
@@ -15,7 +29,7 @@
         Major GPA:3.7/4.0   <br/>            					           
         Sept. 2013 - Jun. 2016
       </p>
-      <a class="project-link" href="#">Check it out</a>
+  
     </div>
   </div>
   <div class="row user-projects">
@@ -30,7 +44,7 @@
         Major GPA:3.5/4.0   <br/>
         Sep. 2015 - Dec. 2015
       </p>
-      <a class="project-link" href="#">Check it out</a>
+  
     </div>
   </div>
 </div>
