--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,7 @@
   </div>
   <div class="row user-projects">
     <div class="six columns images">
-      <img alt="USC" src="{{ "/assets/img/usc.jpg" | prepend: site.baseurl }}" />
+      <img alt="usc" src="{{ "/assets/img/usc.jpg" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
       <h5> Univesity of Southern California </h5>
