--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -6,45 +6,45 @@
   
   <div class="row user-projects">
     <div class="six columns images">
-      <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
+      <img alt="mountains" src="{{ "/assets/img/usc.jpg" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
-      <h5> Soochow University </h5>
-      
-      <p>
-        Major: Software Engineering<br/>
-        Major GPA:3.7/4.0   <br/>            					           
-        Sept. 2013 - Jun. 2016
+      <h5>Univesity of Southern California  </h5>
+        <p>
+        Major: Computer Science<br/>         					           
+        Sept. 2017 - May. 2019
       </p>
+ 
   
     </div>
   </div>
   <div class="row user-projects">
     <div class="six columns">
-      <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
+      <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
-      <h5> University of Wisconsin Madison</h5>
-
-      <p>
-        Major: Computer Science<br/>
-        Major GPA:3.5/4.0   <br/>
-        Sep. 2015 - Dec. 2015
+      <h5>Soochow University </h5>
+     <p>
+        Major: Software Engineering<br/>
+        Major GPA:3.7/4.0   <br/>            					           
+        Sept. 2013 - Jun. 2016
       </p>
+
   
     </div>
   </div>
   
   <div class="row user-projects">
     <div class="six columns images">
-      <img alt="usc" src="{{ "/assets/img/usc.jpg" | prepend: site.baseurl }}" />
+      <img alt="usc" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
     </div>
     <div class="six columns">
-      <h5> Univesity of Southern California </h5>
+      <h5> University of Wisconsin Madison </h5>
       
-      <p>
-        Major: Computer Science<br/>         					           
-        Sept. 2017 - May. 2019
+          <p>
+        Major: Computer Science<br/>
+        Major GPA:3.5/4.0   <br/>
+        Sep. 2015 - Dec. 2015
       </p>
  
     </div>
