--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,14 +4,14 @@
     <p> 
 
 <h5>Institute of Human Language Technology, Soochow University     </h5>                                          
-Project: Research on NLP &nbsp; &nbsp; &nbsp;  Sep 2013 – Jan 2017<br/>                                                              
+<h5>Project: Research on NLP &nbsp; &nbsp; &nbsp;  Sep 2013 – Jan 2017</h5>                                                          
 Developed a reptile program to get parallel corpus from website based on JAVA, which can be used as training or testing file for SMT and NMT experiments. Classify the corpus and writing documents.<br/>
 Project of term extraction using statistical methods. It can extract bilingual terms from parallel corpus efficiently.<br/>
 Designing different Convolutional neural networks to improve the accuracy of the existent translation system using Theano and Python.<br/>
     </p>
     <p>
 
-Project: Translation Analysis System &nbsp; &nbsp; &nbsp; Jul. 2015 - Aug. 2015<br/> 											     
+<h5>Project: Translation Analysis System &nbsp; &nbsp; &nbsp; Jul. 2015 - Aug. 2015</h5>										     
  Designed a Translation Visualization system using ECharts and JavaScript, which can help researchers analyses the machine translation process in a clear and convenient way.<br/>
  Designed an Intelligent machine translation analysis system, which can tell users both general and specific performance of two different translation systems, based on HTML, JSP, Bootstrap, and JAVA.<br/>
 
