--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,6 +11,7 @@
     <div class="six columns">
       <h5>Univesity of Southern California  </h5>
         <p>
+           Degree: Master<br/>  
         Major: Computer Science<br/>         					           
         Sept. 2017 - May. 2019
       </p>
@@ -26,6 +27,7 @@
       <h5>Soochow University </h5>
      <p>
         Major: Software Engineering<br/>
+       Degree: Bachelor<br/>  
         Major GPA:3.7/4.0   <br/>            					           
         Sept. 2013 - Jun. 2016
       </p>
