--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -12,7 +12,8 @@
       <h5>Univesity of Southern California  </h5>
         <p>
            Degree: Master<br/>  
-        Major: Computer Science<br/>         					           
+        Major: Computer Science<br/>  
+          GPA:3.7/4.0   <br/> 
         Sept. 2017 - May. 2019
       </p>
  
