--- a/_includes/about.html
+++ b/_includes/about.html
@@ -29,6 +29,13 @@ Developed the software of robot: Nexteer automatic screw project, Nexteer rotor 
 Responsible for online platform work for the tax system<br/>
 Responsible for online account cancellation made by enterprises<br/>
 Responsible for online invoice sales<br/>
+</p>
+<p>
+<h5>Directed Research Project ‘KashFlow’ in USC (NLP) </h5>                         Jan 2018 - Now <br/>
+Using crawler to capture information of financial products, and collecting user’s financial story by Plaid.<br/>
+Chunking and analysis data using NLTK.<br/>
+Created a method to automatically suggest & open new products (credit cards &/or loans) to “normalize”<br/>
+user’s credit profile and squeeze more cash or points out of user’s current situation.<br/>
 
  </p>
   </div>
