--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,9 +16,22 @@ Designing different Convolutional neural networks to improve the accuracy of the
  Designed an Intelligent machine translation analysis system, which can tell users both general and specific performance of two different translation systems, based on HTML, JSP, Bootstrap, and JAVA.<br/>
 
  </p>
+<p>
+<h5>Directed Research Project ‘KashFlow’ in USC (NLP) </h5>                         Jan 2018 - Now <br/>
+Using crawler to capture information of financial products, and collecting user’s financial story by Plaid.<br/>
+Chunking and analysis data using NLTK.<br/>
+Created a method to automatically suggest & open new products (credit cards &/or loans) to “normalize”<br/>
+user’s credit profile and squeeze more cash or points out of user’s current situation.<br/>
+
+ </p>
   </div>
   <div class="user-details">
     <h3> WORK EXPERIENCE </h3>
+       <p> 
+<h5>Intern, Knexus research Corporation    </h5>                                                Aug. 2016 - Apr. 2017 <br/>
+Responsible for the development of embedded system<br/>
+Developed the software of robot: Nexteer automatic screw project, Nexteer rotor sprint project. <br/>
+    </p>
     <p> 
 <h5>Intern, NONEAD Corporation    </h5>                                                Aug. 2016 - Apr. 2017 <br/>
 Responsible for the development of embedded system<br/>
@@ -30,14 +43,7 @@ Responsible for online platform work for the tax system<br/>
 Responsible for online account cancellation made by enterprises<br/>
 Responsible for online invoice sales<br/>
 </p>
-<p>
-<h5>Directed Research Project ‘KashFlow’ in USC (NLP) </h5>                         Jan 2018 - Now <br/>
-Using crawler to capture information of financial products, and collecting user’s financial story by Plaid.<br/>
-Chunking and analysis data using NLTK.<br/>
-Created a method to automatically suggest & open new products (credit cards &/or loans) to “normalize”<br/>
-user’s credit profile and squeeze more cash or points out of user’s current situation.<br/>
 
- </p>
   </div>
   <div class="user-details">
     <h3> TECHNICAL SKILLS  </h3>
