--- a/_includes/about.html
+++ b/_includes/about.html
@@ -28,9 +28,9 @@ user’s credit profile and squeeze more cash or points out of user’s current 
   <div class="user-details">
     <h3> WORK EXPERIENCE </h3>
        <p> 
-<h5>Intern, Knexus research Corporation    </h5>                                                Aug. 2016 - Apr. 2017 <br/>
-Responsible for the development of embedded system<br/>
-Developed the software of robot: Nexteer automatic screw project, Nexteer rotor sprint project. <br/>
+<h5>AI R&D reseach Intern, Knexus research Corporation    </h5>                                                Jun. 2018 - Aug. 2018 <br/>
+Responsible for the development of AI and ML algorithm<br/>
+
     </p>
     <p> 
 <h5>Intern, NONEAD Corporation    </h5>                                                Aug. 2016 - Apr. 2017 <br/>
@@ -68,7 +68,7 @@ Responsible for online invoice sales<br/>
       <i class="devicon-git-plain"></i>
       <i class="devicon-gulp-plain colored"></i>
       <i class="devicon-atom-original-wordmark"></i>
-      <p>Visual Studio, Eclipse, NetBeans, Apache Tomcat, Github</p>
+      <p>Pytorch, NLTK, NetBeans, Apache Tomcat, Github</p>
     </div>
   </div>
  <div class="user-details">
